Fix header overlap of apps, add spinner to splash screen

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -22,7 +22,6 @@
     background-size: cover;
 }
 
-
 #home-bg {
     overflow: hidden;
     position: fixed;
@@ -35,17 +34,21 @@
     background-size: 100% 100%;
 }
 
-ion-toolbar {
+ion-toolbar{
     position: fixed;
+    left: 0;
+    right: 0;
     top: 10px !important;
 }
 
 ion-button {
-    color: black;
+    ion-icon {
+        color: black;
+    }
 }
 
 ion-grid {
-    margin-top: px2rem(50px);
+    margin-top: px2rem(120px);
     padding: 0 !important;
     // background-color: red;
     margin-left: px2rem(27px);
